--- a/src/main/webapp/MaintenanceCustomers.html
+++ b/src/main/webapp/MaintenanceCustomers.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>苦户资料维护</title>
+    <title>客户资料维护</title>
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+<!--添加新的用户:注入添加条目代码-->
     <script>
-
         function addCustomers() {
             $("#addCustomer").remove();
             let insertHTML = `<div class="panel panel-default" id="addCustomer">
@@ -28,23 +27,28 @@
             $("#addArea").append(insertHTML);
         }
     </script>
+<!--    根据条目所填信息新建用户-->
     <script>
         var id = 2;
-        function addOver(flag) {
-            let insertHTML = ``;
-            if(flag===1) {
-                insertHTML = `<tr id="${id}"><td>${$("#customerName1").val()}</td>
-<td>${$("#address").val()}</td><td></td><td>
-<button type="button" class="btn btn-primary btn-xs" onclick="change(id)">修改客户资料</button></td></tr>`;
-            } else {
-                insertHTML = `<tr id="${id}"><td>${$("#customerName2").val()}</td>
-<td>${$("#address2").val()}</td><td></td><td>
-<button type="button" class="btn btn-primary btn-xs" onclick="change(id)">修改客户资料</button></td></tr>`
-            }
-            id += 1;
-            $("#table").append(insertHTML)
+        function addOver() {
+            var name = $("customerName1").val();
+            var tel = $("address").val();
+            $.ajax({
+                type:"GET",
+                url : "/customer/add",
+                data: {name: name, tel: tel},
+                success: function (list) {
+                    alert("添加成功！");
+                    //此处可能加true参数表示重新获取网页
+                    location.reload();
+                },
+                error: function () {
+                    alert("添加失败！");
+                }
+            })
         }
     </script>
+<!--    修改用户信息:注入表格-->
     <script>
         function change(id) {
             $("#addCustomer2").remove();
@@ -53,11 +57,11 @@
                         <form>
                             <div class="form-group">
                                 <label for="goodsName1">客户名字</label>
-                                <input type="text" class="form-control" id="customerName2">
+                                <input type="text" class="form-control" id="customerName2" placeholder="${$('name' + id)}">
                             </div>
                             <div class="form-group">
                                 <label for="address">联系方式</label>
-                                <input type="text" class="form-control" id="address2">
+                                <input type="text" class="form-control" id="address2" placeholder="${$('tel' + id)}">
                             </div>
                             <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
                         </form>
@@ -66,11 +70,71 @@
             $("#changeArea").append(insertHTML);
         }
     </script>
+<!--    修改用户信息：上传服务器新的信息-->
     <script>
         function changeOver(id) {
-            addOver(0);
-            $("#" + id).remove();
-            $("#addCustomer2").remove();
+            var customerId = id;
+            var name = $("#customerName2").val();
+            var tel = $("#address2").val();
+            $.ajax({
+                type:"GET",
+                url : "/customer/update",
+                dataType: "json",
+                data: {customerId: customerId, name: name, tel: tel},
+                success: function (list) {
+                    alert("修改成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("修改失败！");
+                }
+            })
+        }
+    </script>
+<!--    页面加载时获取表格-->
+    <script>
+        $.ajax({
+            type: "GET",
+            url: "/customer/allcustomers",
+            dataType:"json",
+            success: function (list) {
+                for(var i = 0; i < list.length; i++){
+                    var id = list.get(i).customerId;
+                    var name = list.get(i).customerName;
+                    var tel = list.get(i).customerTel;
+                    var sellOrders = list.get(i).historySellOrderId;
+                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td><td>
+                <table>`;
+                    for (var j = 0; j <sellOrders.length; j++){
+                        insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
+                    }
+                    insert += `</table></td><td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td>
+<td><button type="button" class="btn btn-primary btn-xs" onclick="delete(${id})">删除用户</button></td></tr>`;
+                    $("#table").append(insert);
+                }
+
+            },
+            error: function () {
+                alert("获取失败！");
+            }
+        })
+    </script>
+<!--    删除客户函数-->
+    <script>
+        function deleteCustomer(id) {
+            $.ajax({
+                type:"GET",
+                url : "/customer/delete",
+                dataType: "json",
+                data: {customerId: id},
+                success: function (list) {
+                    alert("删除成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("修改失败！");
+                }
+            })
         }
     </script>
 </head>
@@ -84,26 +148,7 @@
         <button type="button" class="btn btn-primary btn" onclick="window.location.href='findCustomer.html'">查找客户</button>
         <table class="table table-hover" id="table">
             <tr><th>客户姓名</th><th>联系方式</th><th>购买历史信息</th></tr>
-            <tr id="0"><td>张三</td><td>18883238833</td><td>
-                <table>
-                    <tr><td>信息1</td></tr>
-                    <tr><td>信息2</td></tr>
-                    <tr><td>信息3</td></tr>
-                    <tr><td>信息4</td></tr>
-                </table>
-            </td><td>
-                <button type="button" class="btn btn-primary btn-xs" onclick="change(0)">修改客户资料</button>
-            </td></tr>
-            <tr id="1"><td>李四</td><td>18883238833</td><td>
-                <table>
-                    <tr><td>信息1</td></tr>
-                    <tr><td>信息2</td></tr>
-                    <tr><td>信息3</td></tr>
-                    <tr><td>信息4</td></tr>
-                </table>
-            </td><td>
-                <button type="button" class="btn btn-primary btn-xs" onclick="change(1)">修改客户资料</button>
-            </td></tr>
+
         </table>
     </div>
     <div class="col-md-4" id="addArea"></div>
