--- a/src/main/webapp/findCustomer.html
+++ b/src/main/webapp/findCustomer.html
@@ -5,11 +5,74 @@
     <title>查找客户</title>
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!--    查找用户函数-->
     <script>
         function query(name){
-            alert("未找到相关客户！");
-            let insertHTML = ``;
-            $("#customerTable").append(insertHTML)
+            $.ajax({
+                type: "GET",
+                url: "/customer/queryExamById",
+                dataType: "json",
+                data:{name: name},
+                success:function (list) {
+                    for(var i = 0; i < list.length; i++){
+                        var id = list.get(i).customerId;
+                        var name = list.get(i).customerName;
+                        var tel = list.get(i).customerTel;
+                        var sellOrders = list.get(i).historySellOrderId;
+                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td><td>
+                <table>`;
+                        for (var j = 0; j <sellOrders.length; j++){
+                            insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
+                        }
+                        insert += `</table></td><td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td></tr>`;
+                        $("#customerTable").append(insert);
+                    }
+
+                }
+            })
+        }
+    </script>
+<!--    注入修改表格-->
+    <script>
+        function change(id) {
+            $("#addCustomer2").remove();
+            let insertHTML = `<div class="panel panel-default" id="addCustomer2">
+                    <div class="panel-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="goodsName1">客户名字</label>
+                                <input type="text" class="form-control" id="customerName2" placeholder="${$('name' + id)}">
+                            </div>
+                            <div class="form-group">
+                                <label for="address">联系方式</label>
+                                <input type="text" class="form-control" id="address2" placeholder="${$('tel' + id)}">
+                            </div>
+                            <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
+                        </form>
+                    </div>
+                </div>`;
+            $("#changeArea").append(insertHTML);
+        }
+    </script>
+<!--    提交修改表格-->
+    <script>
+        function changeOver(id) {
+            var customerId = id;
+            var name = $("#customerName2").val();
+            var tel = $("#address2").val();
+            $.ajax({
+                type:"GET",
+                url : "/customer/update",
+                dataType: "json",
+                data: {customerId: customerId, name: name, tel: tel},
+                success: function (list) {
+                    alert("修改成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("修改失败！");
+                }
+            })
         }
     </script>
 </head>
@@ -29,6 +92,6 @@
 
     </div>
 </div>
-<div class="col-md-4" id="addArea"></div>
+<div class="col-md-4" id="changeArea"></div>
 </body>
 </html>
