--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -16,7 +16,7 @@
                 <button type="button" class="btn btn-primary btn-lg btn-block"
                 	onclick = "window.location.href='MaintenanceCustomers.html'">客户资料维护</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block"
-                	onclick = "window.location.href='BusinessmManage.html'">销售业务管理</button>
+                	onclick = "window.location.href='SellOrderManage.html'">销售业务管理</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block"
                 	onclick ="window.location.href='StockManage.html'">库存管理</button>
             </div>
