--- a/src/main/webapp/CreateSalesOrder.html
+++ b/src/main/webapp/CreateSalesOrder.html
@@ -5,6 +5,7 @@
     <title>开销售单</title>
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<!--    开销售单：注入代码-->
     <script>
         function addGoods() {
             let insertHTML = `
@@ -12,32 +13,20 @@
                     <div class="panel-body">
                         <form>
                             <div class="form-group">
-                                <label for="goodsName1">商品名称</label>
-                                <input type="text" class="form-control" id="goodsName1">
+                                <label for="goodsId">商品ID</label>
+                                <input type="text" class="form-control" id="goodsId">
                             </div>
                             <div class="form-group">
-                                <label for="type1">规格型号</label>
-                                <input type="text" class="form-control" id="type1">
+                                <label for="goodsPrice">商品单价</label>
+                                <input type="text" class="form-control" id="goodsPrice">
                             </div>
                             <div class="form-group">
-                                <label for="unit1">单位</label>
-                                <input type="text" class="form-control" id="unit1">
+                                <label for="priceSum">总售价</label>
+                                <input type="text" class="form-control" id="priceSum">
                             </div>
                             <div class="form-group">
-                                <label for="number1">数量</label>
-                                <input type="text" class="form-control" id="number1">
-                            </div>
-                            <div class="form-group">
-                                <label for="price1">单价</label>
-                                <input type="text" class="form-control" id="price1">
-                            </div>
-                            <div class="form-group">
-                                <label for="totalNumber1">金额</label>
-                                <input type="text" class="form-control" id="totalNumber1">
-                            </div>
-                            <div class="form-group">
-                                <label for="docu1">备注</label>
-                                <input type="text" class="form-control" id="docu1">
+                                <label for="customerId">顾客ID</label>
+                                <input type="text" class="form-control" id="customerId">
                             </div>
                         </form>
                     </div>
@@ -45,6 +34,28 @@
             $("#show").append(insertHTML)
         }
     </script>
+<!--    开销售单：上交服务器-->
+<script>
+    function addOver() {
+        var goodsId = $("#goodsId").val();
+        var price = $("#price").val();
+        var sum = $("#priceSum").val();
+        var customerId = $("#customerId").val();
+        $.ajax({
+            type:"GET",
+            url : "/sellOrder/add",
+            dataType: "json",
+            data: {goodsId: goodsId, sellUnitPrice: price, sellsum: sum, customerId: customerId},
+            success: function (list) {
+                alert("添加成功！");
+                window.location.href="BusinessmManage.html"
+            },
+            error: function () {
+                alert("添加失败！");
+            }
+        })
+    }
+</script>
 </head>
 <body>
 
@@ -57,18 +68,22 @@
         <div class="panel-body">
             <form>
                 <div class="form-group">
-                    <label for="customName">客户姓名</label>
-                    <input type="text" class="form-control" id="customName" placeholder="客户姓名">
+                    <label for="goodsId">商品ID</label>
+                    <input type="text" class="form-control" id="goodsId">
                 </div>
                 <div class="form-group">
-                    <label for="date">日期</label>
-                    <input type="text" class="form-control" id="date" placeholder="日期">
+                    <label for="goodsPrice">商品单价</label>
+                    <input type="text" class="form-control" id="goodsPrice">
                 </div>
-                <button type="button" class="btn btn-default" onclick="addGoods()">添加销售物品</button>
-                <div id="show">
-
+                <div class="form-group">
+                    <label for="priceSum">总售价</label>
+                    <input type="text" class="form-control" id="priceSum">
                 </div>
-                <button type="submit" class="btn btn-default" onclick="alert('提交成功！')">提交</button>
+                <div class="form-group">
+                    <label for="customerId">顾客ID</label>
+                    <input type="text" class="form-control" id="customerId">
+                </div>
+                <button type="submit" class="btn btn-default" onclick="addOver()">提交</button>
             </form>
         </div>
     </div>
