--- a/src/main/webapp/MaintenanceGoods.html
+++ b/src/main/webapp/MaintenanceGoods.html
@@ -5,6 +5,7 @@
     <title>货物资料维护</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="jquery.js"></script>
+<!--   添加货物：注入代码 -->
     <script>
         function addGoods() {
             $("#addCustomer").remove();
@@ -14,24 +15,24 @@
                     <h3>添加</h3>
                         <form>
                             <div class="form-group">
-                                <label for="goodsName">货品名字</label>
-                                <input type="text" class="form-control" id="goodsName">
+                                <label for="goodsId">货物编号</label>
+                                <input type="text" class="form-control" id="goodsId">
                             </div>
                             <div class="form-group">
-                                <label for="number">编号</label>
-                                <input type="text" class="form-control" id="number">
+                                <label for="goodsName">货物名称</label>
+                                <input type="text" class="form-control" id="goodsName">
                             </div>
                              <div class="form-group">
-                                <label for="stock">库存</label>
-                                <input type="text" class="form-control" id="stock">
+                                <label for="wareId">仓库编号</label>
+                                <input type="text" class="form-control" id="wareId">
                             </div>
                              <div class="form-group">
-                                <label for="inprice">进货价</label>
-                                <input type="text" class="form-control" id="inprice">
+                                <label for="goodsNumber">货物数量</label>
+                                <input type="text" class="form-control" id="goodsNumber">
                             </div>
                              <div class="form-group">
-                                <label for="outprice">销售价</label>
-                                <input type="text" class="form-control" id="outprice">
+                                <label for="spec">货物规格</label>
+                                <input type="text" class="form-control" id="spec">
                             </div>
                             <button class="btn btn-default" type="button" onclick="insertAdd()">提交</button>
                         </form>
@@ -40,76 +41,141 @@
             $("#addArea").append(insertHTML);
         }
     </script>
+    <!--添加货物：上传服务器-->
     <script>
-        var id = 1;
         function insertAdd(){
-            let insertHTML = `<tr id="${id}"><td>${$("#goodsName").val()}</td>
-<td>${$("#number").val()}</td>
-<td>${$("#stock").val()}</td>
-<td>${$("#inprice").val()}</td>
-<td>${$("#outprice").val()}</td>
-<td>
-            <button type="button" class="btn btn-primary btn-xs" onclick="change(id)">修改货品</button>
-            <button type="button" class="btn btn-primary btn-xs" onclick="$('#${id}').remove()">删除货品</button>
-        </td></tr>`;
-            id += 1;
-            $("#goods").append(insertHTML);
-            alert("已提交");
+            var id = $("#goodsId").val();
+            var name = $("#goodsName").val();
+            var wareId = $("#wareId").val();
+            var number = $("#goodsNumber").val();
+            var spec = $("#spec").val();
+            $.ajax({
+                type:"GET",
+                url : "/goods/add",
+                data: {checkGoodsId: id, goodsNumber: number, goodsName: name, spec: spec, warehouseId: wareId},
+                success: function (list) {
+                    alert("添加成功！");
+                    //此处可能加true参数表示重新获取网页
+                    location.reload();
+                },
+                error: function () {
+                    alert("添加失败！");
+                }
+            })
         }
     </script>
+<!--    修改货物：注入代码-->
     <script>
         function change(id){
             let insertHTML = `<div class="panel panel-default" id="addCustomer">
 
                     <div class="panel-body">
                     <h3>修改</h3>
-                        <form>
-                            <div class="form-group">
-                                <label for="goodsName">货品名字</label>
-                                <input type="text" class="form-control" id="goodsName" placeholder="">
+                       <div class="form-group">
+                                <label for="goodsId1">货物编号</label>
+                                <input type="text" class="form-control" id="goodsId1" placeholder="${id}">
                             </div>
                             <div class="form-group">
-                                <label for="number">编号</label>
-                                <input type="text" class="form-control" id="number">
+                                <label for="goodsName1">货物名称</label>
+                                <input type="text" class="form-control" id="goodsName1" placeholder="${$('name' + id).val()}">
                             </div>
                              <div class="form-group">
-                                <label for="stock">库存</label>
-                                <input type="text" class="form-control" id="stock">
+                                <label for="wareId1">仓库编号</label>
+                                <input type="text" class="form-control" id="wareId1" placeholder="${$('wareId' + id).val()}">
                             </div>
                              <div class="form-group">
-                                <label for="inprice">进货价</label>
-                                <input type="text" class="form-control" id="inprice">
+                                <label for="goodsNumber1">货物数量</label>
+                                <input type="text" class="form-control" id="goodsNumber1" placeholder="${$('number' + id).val()}">
                             </div>
                              <div class="form-group">
-                                <label for="outprice">销售价</label>
-                                <input type="text" class="form-control" id="outprice">
+                                <label for="spec1">货物规格</label>
+                                <input type="text" class="form-control" id="spec1" placeholder="${$('spec' + id).val()}">
                             </div>
-                            <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
+                            <button class="btn btn-default" type="button" onclick="changeOver()">提交</button>
                         </form>
                     </div>
                 </div>`;
             $("#changeArea").append(insertHTML);
         }
-    </script>
+    </script>、
+<!--    修改货物：上交服务器-->
     <script>
-        function changeOver(id) {
-            insertAdd();
-            let changeId = id;
-            $("#"+changeId).remove()
+        function changeOver() {
+            var id = $("#goodsId1").val();
+            var name = $("#goodsName1").val();
+            var wareId = $("#wareId1").val();
+            var number = $("#goodsNumber1").val();
+            var spec = $("#spec1").val();
+            $.ajax({
+                type:"GET",
+                url : "/goods/update",
+                dataType: "json",
+                data: {id: id, goodsName: name, spec: spec, warehouseId: wareId, goodsNumber:number},
+                success: function (list) {
+                    alert("修改成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("修改失败！");
+                }
+            })
+
+        }
+    </script>
+<!--    打开页面取得货物列表-->
+    <script>
+        $.ajax({
+            type: "GET",
+            url: "/goods/allGoods",
+            dataType:"json",
+            success: function (list) {
+                for(var i = 0; i < list.length; i++){
+                    var id = list.get(i).goodsId;
+                    var name = list.get(i).goodsName;
+                    var spec = list.get(i).goodsSpecification;
+                    var wareId = list.get(i).warehouseId;
+                    var number = list.get(i).goodsNumber;
+                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
+                    insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button></td>
+<td><button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;
+                    $("#goods").append(insert);
+                }
+
+            },
+            error: function () {
+                alert("获取失败！");
+            }
+        })
+    </script>
+<!--    删除货物-->
+    <script>
+        function deleteGoods(id) {
+            $.ajax({
+                type:"GET",
+                url : "/goods/delete",
+                dataType: "json",
+                data: {id: id},
+                success: function (list) {
+                    alert("删除成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("删除失败！");
+                }
+            })
         }
     </script>
 </head>
+<body>
 <div class="col-md-4" id="changeArea"></div>
 <div class="col-md-4">
     <button type="button" class="btn btn-primary btn-lg" onclick = "addGoods()">增加货品</button>
     <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='findGoods.html'">查找货品</button>
     <table class="table table-hover">
-        <tr><th>货品名称</th><th>编号</th><th>库存</th><th>进货价</th><th>销售价</th><th>操作</th></tr>
+        <tr><th>货物编号</th><th>货物名称</th><th>仓库编号</th><th>货物数量</th><th>货物规格</th><th>操作</th></tr>
         <tbody id = "goods">
-        	<tr id="0"><td>加多宝</td><td>1</td><td>200</td><td>2</td><td>3</td><td>
-            	<button type="button" class="btn btn-primary btn-xs" onclick="change(0)">修改货品</button>
-            	<button type="button" class="btn btn-primary btn-xs" onclick="$('#0').remove()">删除货品</button>
-        	</td></tr>
+
         </tbody>
     </table>
 </div>
