--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -5,10 +5,75 @@
     <title>库存管理</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="jquery.js"></script>
+<!--    添加库存-->
     <script>
         function addGoods() {
-            alert("添加成功！");
+            var id = $("#goodsId").val();
+            var price = $("#price").val();
+            var number = $("#number").val();
+            var remark = $("#remark").val();
+            $.ajax({
+                type:"GET",
+                url : "/importOrder/addNewImportOrder",
+                data: {goodsNumber: number, inputUnitPrice: price, goodsId: id, spec: spec, remark: remark},
+                success: function (bool) {
+                    alert("添加成功！");
+                    //此处可能加true参数表示重新获取网页
+                    location.reload();
+                },
+                error: function () {
+                    alert("添加失败！");
+                }
+            })
 
+        }
+    </script>
+<!--    库存盘点加载-->
+    <script>
+        $.ajax({
+            type:"GET",
+            url : "/warehouseController/getAllGoods",
+            success: function (list) {
+                for(var i = 0; i < list.length; i++){
+                    var id = list.get(i).goodsId;
+                    var name = list.get(i).goodsName;
+                    var spec = list.get(i).goodsSpecification;
+                    var wareId = list.get(i).warehouseId;
+                    var number = list.get(i).goodsNumber;
+                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
+                    $("#goods").append(insert);
+                }
+            },
+            error: function () {
+                alert("获取失败！");
+            }
+        })
+    </script>
+<!--    库存统计查询-->
+    <script>
+        function query(){
+            var name = $("#queryName").val();
+            $.ajax({
+                type:"GET",
+                url : "/warehouseController/queryGoodsByName",
+                data: {name: name},
+                success: function (list) {
+                    for(var i = 0; i < list.length; i++){
+                        var id = list.get(i).goodsId;
+                        var name = list.get(i).goodsName;
+                        var spec = list.get(i).goodsSpecification;
+                        var wareId = list.get(i).warehouseId;
+                        var number = list.get(i).goodsNumber;
+                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
+                        $("#goods").append(insert);
+                    }
+                },
+                error: function () {
+                    alert("获取失败！");
+                }
+            })
         }
     </script>
 </head>
@@ -21,8 +86,8 @@
             <h3><span class="label label-default">进货</span></h3>
             <form>
                 <div class="form-group">
-                    <label for="goodsName">进货货品</label>
-                    <input type="text" class="form-control" id="goodsName">
+                    <label for="goodsId">进货货品ID</label>
+                    <input type="text" class="form-control" id="goodsId">
                 </div>
                 <div class="form-group">
                     <label for="price">单价</label>
@@ -32,7 +97,11 @@
                     <label for="number">数量</label>
                     <input type="text" class="form-control" id="number">
                 </div>
-                <button type="button" class="btn btn-default" onclick="alert('添加成功！')">提交</button>
+                <div class="form-group">
+                    <label for="remark">备注</label>
+                    <input type="text" class="form-control" id="remark">
+                </div>
+                <button type="button" class="btn btn-default" onclick="addGoods()">提交</button>
             </form>
         </div>
     </div>
@@ -50,17 +119,13 @@
 <div class="col-md-4">
     <div class="panel panel-default">
         <div class="panel-body">
-            <h3><span class="label label-default">库存统计查询（使用库存名字或者价格）</span></h3>
+            <h3><span class="label label-default">库存统计查询</span></h3>
             <form>
                 <div class="form-group">
-                    <label for="name">库存名</label>
-                    <input type="text" class="form-control" id="name" placeholder="库存名">
+                    <label for="queryName">库存名</label>
+                    <input type="text" class="form-control" id="queryName" placeholder="库存名">
                 </div>
-                <div class="form-group">
-                    <label for="goodsPrice">价格</label>
-                    <input type="text" class="form-control" id="goodsPrice" placeholder="价格">
-                </div>
-                <button type="submit" class="btn btn-default" onclick="alert('未找到相关货物！')">查询</button>
+                <button type="button" class="btn btn-default" onclick="alert('未找到相关货物！')">查询</button>
             </form>
         </div>
     </div>
