--- a/src/main/webapp/findGoods.html
+++ b/src/main/webapp/findGoods.html
@@ -5,11 +5,94 @@
     <title>查找物品</title>
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!--    查找用户函数-->
     <script>
         function query(name){
-            alert("未找到相关货物！");
-            let insertHTML = ``;
-            $("#customerTable").append(insertHTML)
+            $.ajax({
+                type: "GET",
+                url: "/goods/queryGoodsByName",
+                dataType: "json",
+                data:{name: name},
+                success:function (list) {
+                    for(var i = 0; i < list.length; i++){
+                        var id = list.get(i).goodsId;
+                        var name = list.get(i).goodsName;
+                        var spec = list.get(i).goodsSpecification;
+                        var wareId = list.get(i).warehouseId;
+                        var number = list.get(i).goodsNumber;
+                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
+                        insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button></td>
+<td><button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;
+                        $("#goods").append(insert);
+                    }
+
+                },
+                error: function () {
+                    alert("查找失败！");
+                }
+            })
+        }
+    </script>
+    <!--    注入修改表格-->
+    <script>
+        function change(id) {
+            $("#addCustomer2").remove();
+            let insertHTML = `<div class="panel panel-default" id="addCustomer2">
+                    <div class="panel-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="goodsName1">客户名字</label>
+                                <input type="text" class="form-control" id="customerName2" placeholder="${$('name' + id)}">
+                            </div>
+                            <div class="form-group">
+                                <label for="address">联系方式</label>
+                                <input type="text" class="form-control" id="address2" placeholder="${$('tel' + id)}">
+                            </div>
+                            <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
+                        </form>
+                    </div>
+                </div>`;
+            $("#changeArea").append(insertHTML);
+        }
+    </script>
+    <!--    提交修改表格-->
+    <script>
+        function changeOver(id) {
+            var customerId = id;
+            var name = $("#customerName2").val();
+            var tel = $("#address2").val();
+            $.ajax({
+                type:"GET",
+                url : "/customer/update",
+                dataType: "json",
+                data: {customerId: customerId, name: name, tel: tel},
+                success: function (list) {
+                    alert("修改成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("修改失败！");
+                }
+            })
+        }
+    </script>
+    <!--    删除货物-->
+    <script>
+        function deleteGoods(id) {
+            $.ajax({
+                type:"GET",
+                url : "/goods/delete",
+                dataType: "json",
+                data: {id: id},
+                success: function (list) {
+                    alert("删除成功！");
+                    location.reload();
+                },
+                error: function () {
+                    alert("删除失败！");
+                }
+            })
         }
     </script>
 </head>
@@ -20,12 +103,12 @@
         <h1>查找货物</h1>
     </div>
     <div class="form-group">
-        <label for="customerName">输入货物名字</label>
-        <input type="text" class="form-control" id="customerName">
+        <label for="goodsName">输入货物名字</label>
+        <input type="text" class="form-control" id="goodsName">
     </div>
-    <button class="btn btn-default" type="button" onclick="query($('#customerName').val())">查找</button>
+    <button class="btn btn-default" type="button" onclick="query($('#goodsName').val())">查找</button>
     <br>
-    <div id="customerTable">
+    <div id="goods">
 
     </div>
 </div>
