--- a/src/main/webapp/MaintenanceCustomers.html
+++ b/src/main/webapp/MaintenanceCustomers.html
@@ -31,8 +31,8 @@
     <script>
         var id = 2;
         function addOver() {
-            var name = $("customerName1").val();
-            var tel = $("address").val();
+            var name = $("#customerName1").val();
+            var tel = $("#address").val();
             $.ajax({
                 type:"GET",
                 url : "/customer/add",
@@ -98,19 +98,26 @@
             url: "/customer/allCustomers",
             dataType:"json",
             success: function (list) {
-                for(var i = 0; i < list.length; i++){
-                    var id = list.get(i).customerId;
-                    var name = list.get(i).customerName;
-                    var tel = list.get(i).customerTel;
-                    var sellOrders = list.get(i).historySellOrderId;
-                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td><td>
-                <table>`;
-                    for (var j = 0; j <sellOrders.length; j++){
-                        insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
-                    }
-                    insert += `</table></td><td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td>
+                if (!list){
+                    for(var i = 0; i < list.length; i++){
+                        var id = list[i].customerId;
+                        var name = list[i].customerName;
+                        var tel = list[i].customerTel;
+                        var sellOrders = list[i].historySellOrderId;
+                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td><td>`;
+                        if(!sellOrders){
+                            insert += `<table>`;
+                            for (var j = 0; j <sellOrders.length; j++){
+                                insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
+                            }
+                            insert += `</table></td>`
+                        }
+
+                        insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td>
 <td><button type="button" class="btn btn-primary btn-xs" onclick="delete(${id})">删除用户</button></td></tr>`;
-                    $("#table").append(insert);
+                        $("#table").append(insert);
+                    }
+
                 }
 
             },
