--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -35,11 +35,11 @@
             url : "/warehouseController/getAllGoods",
             success: function (list) {
                 for(var i = 0; i < list.length; i++){
-                    var id = list.get(i).goodsId;
-                    var name = list.get(i).goodsName;
-                    var spec = list.get(i).goodsSpecification;
-                    var wareId = list.get(i).warehouseId;
-                    var number = list.get(i).goodsNumber;
+                    var id = list[i].goodsId;
+                    var name = list[i].goodsName;
+                    var spec = list[i].goodsSpecification;
+                    var wareId = list[i].warehouseId;
+                    var number = list[i].goodsNumber;
                     let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
                     $("#goods").append(insert);
@@ -59,16 +59,19 @@
                 url : "/warehouseController/queryGoodsByName",
                 data: {name: name},
                 success: function (list) {
-                    for(var i = 0; i < list.length; i++){
-                        var id = list.get(i).goodsId;
-                        var name = list.get(i).goodsName;
-                        var spec = list.get(i).goodsSpecification;
-                        var wareId = list.get(i).warehouseId;
-                        var number = list.get(i).goodsNumber;
-                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+                    if (!list){
+                        for(var i = 0; i < list.length; i++){
+                            var id = list[i].goodsId;
+                            var name = list[i].goodsName;
+                            var spec = list[i].goodsSpecification;
+                            var wareId = list[i].warehouseId;
+                            var number = list[i].goodsNumber;
+                            let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
-                        $("#goods").append(insert);
+                            $("#goods").append(insert);
+                        }
                     }
+
                 },
                 error: function () {
                     alert("获取失败！");
