--- a/src/main/webapp/findCustomer.html
+++ b/src/main/webapp/findCustomer.html
@@ -14,20 +14,25 @@
                 dataType: "json",
                 data:{name: name},
                 success:function (list) {
-                    for(var i = 0; i < list.length; i++){
-                        var id = list.get(i).customerId;
-                        var name = list.get(i).customerName;
-                        var tel = list.get(i).customerTel;
-                        var sellOrders = list.get(i).historySellOrderId;
-                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td><td>
-                <table>`;
-                        for (var j = 0; j <sellOrders.length; j++){
-                            insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
-                        }
-                        insert += `</table></td><td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td></tr>`;
-                        $("#customerTable").append(insert);
-                    }
+                    if (!list){
+                        for(var i = 0; i < list.length; i++){
+                            var id = list[i].customerId;
+                            var name = list[i].customerName;
+                            var tel = list[i].customerTel;
+                            var sellOrders = list[i].historySellOrderId;
 
+                            let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>`;
+                            if (!sellOrders){
+                                insert += `<td><table>`;
+                                for (var j = 0; j <sellOrders.length; j++){
+                                    insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
+                                }
+                                insert += `</table></td>`;
+                            }
+                            insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改客户资料</button></td></tr>`;
+                            $("#customerTable").append(insert);
+                        }
+                    }
                 }
             })
         }
