--- a/src/main/webapp/findGoods.html
+++ b/src/main/webapp/findGoods.html
@@ -14,19 +14,20 @@
                 dataType: "json",
                 data:{name: name},
                 success:function (list) {
-                    for(var i = 0; i < list.length; i++){
-                        var id = list.get(i).goodsId;
-                        var name = list.get(i).goodsName;
-                        var spec = list.get(i).goodsSpecification;
-                        var wareId = list.get(i).warehouseId;
-                        var number = list.get(i).goodsNumber;
-                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+                    if (!list){
+                        for(var i = 0; i < list.length; i++){
+                            var id = list[i].goodsId;
+                            var name = list[i].goodsName;
+                            var spec = list[i].goodsSpecification;
+                            var wareId = list[i].warehouseId;
+                            var number = list[i].goodsNumber;
+                            let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
-                        insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button></td>
+                            insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button></td>
 <td><button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;
-                        $("#goods").append(insert);
+                            $("#goods").append(insert);
+                        }
                     }
-
                 },
                 error: function () {
                     alert("查找失败！");
