--- a/src/main/webapp/findGoods.html
+++ b/src/main/webapp/findGoods.html
@@ -14,7 +14,7 @@
                 dataType: "json",
                 data:{name: name},
                 success:function (list) {
-                    if (!list){
+                    if (list !== null){
                         for(var i = 0; i < list.length; i++){
                             var id = list[i].goodsId;
                             var name = list[i].goodsName;
