--- a/src/main/webapp/MaintenanceCustomers.html
+++ b/src/main/webapp/MaintenanceCustomers.html
@@ -98,14 +98,14 @@
             url: "/customer/allCustomers",
             dataType:"json",
             success: function (list) {
-                if (!list){
+                if (list !== null){
                     for(var i = 0; i < list.length; i++){
                         var id = list[i].customerId;
                         var name = list[i].customerName;
                         var tel = list[i].customerTel;
                         var sellOrders = list[i].historySellOrderId;
                         let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td><td>`;
-                        if(!sellOrders){
+                        if(sellOrders !== null){
                             insert += `<table>`;
                             for (var j = 0; j <sellOrders.length; j++){
                                 insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
