--- a/src/main/webapp/findCustomer.html
+++ b/src/main/webapp/findCustomer.html
@@ -14,7 +14,7 @@
                 dataType: "json",
                 data:{name: name},
                 success:function (list) {
-                    if (!list){
+                    if (list !== null){
                         for(var i = 0; i < list.length; i++){
                             var id = list[i].customerId;
                             var name = list[i].customerName;
@@ -22,7 +22,7 @@
                             var sellOrders = list[i].historySellOrderId;
 
                             let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'tel' + id}">${tel}</td>`;
-                            if (!sellOrders){
+                            if (sellOrders !== null){
                                 insert += `<td><table>`;
                                 for (var j = 0; j <sellOrders.length; j++){
                                     insert += `<tr><td>${sellOrders.get(j)}</td></tr>`;
