--- a/src/main/webapp/CreateSalesOrder.html
+++ b/src/main/webapp/CreateSalesOrder.html
@@ -38,14 +38,15 @@
 <script>
     function addOver() {
         var goodsId = $("#goodsId").val();
-        var price = $("#price").val();
+        var price = $("#goodsPrice").val();
         var sum = $("#priceSum").val();
         var customerId = $("#customerId").val();
+        var remark = $("#remark").val();
         $.ajax({
             type:"GET",
             url : "/sellOrder/add",
             dataType: "json",
-            data: {goodsId: goodsId, sellUnitPrice: price, sellsum: sum, customerId: customerId},
+            data: {goodsId: goodsId, sellUnitPrice: price, sellsum: sum, customerId: customerId, remark: remark},
             success: function (list) {
                 alert("添加成功！");
                 window.location.href="BusinessmManage.html"
@@ -82,6 +83,10 @@
                 <div class="form-group">
                     <label for="customerId">顾客ID</label>
                     <input type="text" class="form-control" id="customerId">
+                </div>
+                <div class="form-group">
+                    <label for="remark">备注</label>
+                    <input type="text" class="form-control" id="remark">
                 </div>
                 <button type="submit" class="btn btn-default" onclick="addOver()">提交</button>
             </form>
