--- a/src/main/webapp/SellOrderManage.html
+++ b/src/main/webapp/SellOrderManage.html
@@ -12,18 +12,21 @@
             url: "/sellOrder/getAllSellOrderUnderCheck",
             dataType:"json",
             success: function (list) {
-                for(var i = 0; i < list.length; i++){
-                    var id = list[i].sellOrderId;
-                    var goodsId = list[i].sellGoodsId;
-                    var price = list[i].sellUnitPrice;
-                    var number = list[i].SellNumber;
-                    var customerId = list[i].customerId;
-                    var remark = list[i].sellOrderRemark;
-                    var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td>
-<td><button class="btn btn-xs btn-primary" onclick="deleteOrder(${id})">删除订单</button></td>
+                if (list !== null){
+                    for(var i = 0; i < list.length; i++){
+                        var id = list[i].sellOrderId;
+                        var goodsId = list[i].sellGoodsId;
+                        var price = list[i].sellUnitPrice;
+                        var number = list[i].sellNumber;
+                        var customerId = list[i].customerId;
+                        var remark = list[i].sellOrderRemark;
+                        alert(number);
+                        var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td>
+<td><table><td><button class="btn btn-xs btn-primary" onclick="deleteOrder(${id})">删除订单</button></td>
 <td><button class="btn btn-xs btn-primary" onclick="examine(${id}, ${true})">通过</button></td>
-<td><button class="btn btn-xs btn-primary" onclick="examine(${id}, ${false})">不通过</button></td></tr>`;
-                    $("#unexamined").append(insert);
+<td><button class="btn btn-xs btn-primary" onclick="examine(${id}, ${false})">不通过</button></td></table></td></tr>`;
+                        $("#unexamined").append(insert);
+                    }
                 }
             },
             error: function () {
@@ -45,9 +48,13 @@
                     var number = list[i].SellNumber;
                     var customerId = list[i].customerId;
                     var remark = list[i].sellOrderRemark;
-                    var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td>
+                    var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td><td>
+<table>
 <td><button class="btn btn-xs btn-primary" onclick="deleteOrder(${id})">删除订单</button></td>
-<td><button class="btn btn-xs btn-primary" onclick="pay(${id})">付款</button></td></tr>`;
+<td><button class="btn btn-xs btn-primary" onclick="pay(${id})">付款</button></td>
+</table>
+</td></tr>
+`;
                     $("#unpaid").append(insert);
                 }
             },
@@ -71,8 +78,12 @@
                         var number = list[i].SellNumber;
                         var customerId = list[i].customerId;
                         var remark = list[i].sellOrderRemark;
-                        var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td>
-<td><button class="btn btn-xs btn-primary" onclick="refund(${id})">退款</button></td></tr>`;
+                        var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td><td>
+<table>
+<td><button class="btn btn-xs btn-primary" onclick="refund(${id})">退款</button></td>
+</table>
+</td>
+</tr>`;
                         $("#paid").append(insert);
                     }
                 }
@@ -158,6 +169,9 @@
 </head>
 <body>
 <h1>销售业务管理</h1>
+<button type="button" class="btn btn-primary " onclick = "window.location.href='CreateSalesOrder.html'">开销售单</button>
+<br/>
+<br/>
 <div class="col-md-4">
     <p>未审核订单</p>
     <table class="table table-hover" id="unexamined">
