--- a/src/main/webapp/MaintenanceCustomers.html
+++ b/src/main/webapp/MaintenanceCustomers.html
@@ -76,6 +76,13 @@
             var customerId = id;
             var name = $("#customerName2").val();
             var tel = $("#address2").val();
+            if (name.length === 0) {
+                name = $('#name' + id).html();
+            }
+            if (tel.length === 0) {
+                name = $('#tel' + id).html();
+            }
+
             $.ajax({
                 type:"GET",
                 url : "/customer/update",
