--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -132,7 +132,7 @@
                     <label for="queryName">库存名</label>
                     <input type="text" class="form-control" id="queryName" placeholder="库存名">
                 </div>
-                <button type="button" class="btn btn-default" onclick="alert('未找到相关货物！')">查询</button>
+                <button type="button" class="btn btn-default" onclick="query()">查询</button>
             </form>
         </div>
     </div>
