--- a/src/main/webapp/findCustomer.html
+++ b/src/main/webapp/findCustomer.html
@@ -93,9 +93,10 @@
     </div>
     <button class="btn btn-default" type="button" onclick="query($('#customerName').val())">查找</button>
     <br>
-    <div id="customerTable">
+    <br>
+    <table class="table table-hover" id="customerTable">
 
-    </div>
+    </table>
 </div>
 <div class="col-md-4" id="changeArea"></div>
 </body>
