--- a/src/main/webapp/findGoods.html
+++ b/src/main/webapp/findGoods.html
@@ -5,7 +5,7 @@
     <title>查找物品</title>
     <script src="jquery.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!--    查找用户函数-->
+    <!--    查找货品函数-->
     <script>
         function query(name){
             $.ajax({
@@ -44,13 +44,22 @@
                     <div class="panel-body">
                         <form>
                             <div class="form-group">
-                                <label for="goodsName1">客户名字</label>
-                                <input type="text" class="form-control" id="customerName2" placeholder="${$('name' + id)}">
+                                <label for="goodsName">货物名称</label>
+                                <input type="text" class="form-control" id="goodsName" placeholder="${$('#name' + id).html()}">
                             </div>
                             <div class="form-group">
-                                <label for="address">联系方式</label>
-                                <input type="text" class="form-control" id="address2" placeholder="${$('tel' + id)}">
+                                <label for="wareId">仓库ID</label>
+                                <input type="text" class="form-control" id="wareId" placeholder="${$('#wareId' + id).html()}">
                             </div>
+                            <div class="form-group">
+                                <label for="number">数量</label>
+                                <input type="text" class="form-control" id="number" placeholder="${$('#number' + id).html()}">
+                            </div>
+                            <div class="form-group">
+                                <label for="spec">规格</label>
+                                <input type="text" class="form-control" id="spec" placeholder="${$('#spec' + id).html()}">
+                            </div>
+
                             <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
                         </form>
                     </div>
@@ -61,9 +70,22 @@
     <!--    提交修改表格-->
     <script>
         function changeOver(id) {
-            var customerId = id;
-            var name = $("#customerName2").val();
-            var tel = $("#address2").val();
+            var name = $("#goodsName").val();
+            var wareId = $("#wareId").val();
+            var number = $("#number").val();
+            var spec = $("#spec").val();
+            if (name.length === 0) {
+                name = $('#name' + id).html();
+            }
+            if ( wareId.length === 0) {
+                wareId = $('#wareId' + id).html();
+            }
+            if (number.length === 0) {
+                number = $('#number' + id).html();
+            }
+            if (spec.length === 0) {
+                spec = $('#spec' + id).html();
+            }
             $.ajax({
                 type:"GET",
                 url : "/customer/update",
@@ -115,6 +137,6 @@
     <table class="table table-hover" id="goods">
     </table>
 </div>
-<div class="col-md-4" id="addArea"></div>
+<div class="col-md-4" id="changeArea"></div>
 </body>
 </html>
