--- a/src/main/webapp/CreateSalesOrder.html
+++ b/src/main/webapp/CreateSalesOrder.html
@@ -82,7 +82,7 @@
                     <input type="text" class="form-control" id="goodsPrice">
                 </div>
                 <div class="form-group">
-                    <label for="priceSum">总售价</label>
+                    <label for="priceSum">总数量</label>
                     <input type="text" class="form-control" id="priceSum">
                 </div>
                 <div class="form-group">
