--- a/src/main/webapp/SellOrderManage.html
+++ b/src/main/webapp/SellOrderManage.html
@@ -123,7 +123,7 @@
                     var id = list[i].sellOrderId;
                     var goodsId = list[i].sellGoodsId;
                     var price = list[i].sellUnitPrice;
-                    var number = list[i].SellNumber;
+                    var number = list[i].sellNumber;
                     var customerId = list[i].customerId;
                     var remark = list[i].sellOrderRemark;
                     var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td><td>
@@ -154,7 +154,7 @@
                         var id = list[i].sellOrderId;
                         var goodsId = list[i].sellGoodsId;
                         var price = list[i].sellUnitPrice;
-                        var number = list[i].SellNumber;
+                        var number = list[i].sellNumber;
                         var customerId = list[i].customerId;
                         var remark = list[i].sellOrderRemark;
                         var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td><td>
