--- a/src/main/webapp/CreateSalesOrder.html
+++ b/src/main/webapp/CreateSalesOrder.html
@@ -54,7 +54,7 @@
                     alert("添加失败，出现错误！");
                 }
 
-                window.location.href="BusinessmManage.html"
+                window.location.href="main.html"
             },
             error: function () {
                 alert("添加失败！");
