--- a/src/main/webapp/SellOrderManage.html
+++ b/src/main/webapp/SellOrderManage.html
@@ -202,7 +202,7 @@
                 dataType: "json",
                 data: {sellOrderId: id, opinion: boolean},
                 success: function () {
-                    alert("审核成功！");
+                    alert("操作成功！");
                     location.reload();
                 },
                 error: function () {
