--- a/src/main/webapp/CreateSalesOrder.html
+++ b/src/main/webapp/CreateSalesOrder.html
@@ -39,7 +39,7 @@
     function addOver() {
         var goodsId = $("#goodsId").val();
         var price = $("#goodsPrice").val();
-        var sum = $("#priceSum").val();
+        var sum = $("#goodsNumber").val();
         var customerId = $("#customerId").val();
         var remark = $("#remark").val();
         $.ajax({
@@ -82,8 +82,8 @@
                     <input type="text" class="form-control" id="goodsPrice">
                 </div>
                 <div class="form-group">
-                    <label for="priceSum">总数量</label>
-                    <input type="text" class="form-control" id="priceSum">
+                    <label for="goodsNumber">总数量</label>
+                    <input type="text" class="form-control" id="goodsNumber">
                 </div>
                 <div class="form-group">
                     <label for="customerId">顾客ID</label>
