--- a/src/main/webapp/newCustomerList.html
+++ b/src/main/webapp/newCustomerList.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="assets/styles/app.css" type="text/css" />
     <!-- endbuild -->
     <link rel="stylesheet" href="assets/styles/font.css" type="text/css" />
+    <script src="libs/jquery/jquery/dist/jquery.js"></script>
+
     <!--    修改用户信息:注入表格-->
     <script>
         function change(id) {
@@ -103,9 +105,7 @@
 <button type="button" class="btn btn-primary btn-xs" onclick="deleteCustomer(${id})">删除用户</button></td></tr>`;
                         $("#table").append(insert);
                     }
-
                 }
-
             },
             error: function () {
                 alert("获取失败！");
@@ -278,7 +278,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="newStockCheck.html" >
+                            <a href="index.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
