--- a/src/main/webapp/newGoodsList.html
+++ b/src/main/webapp/newGoodsList.html
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="assets/styles/app.css" type="text/css" />
   <!-- endbuild -->
   <link rel="stylesheet" href="assets/styles/font.css" type="text/css" />
+  <script src="libs/jquery/jquery/dist/jquery.js"></script>
+
   <!--    修改货物：注入代码-->
   <script>
     function change(id){
@@ -127,6 +129,7 @@
         alert("获取失败！");
       }
     })
+
   </script>
   <!--    删除货物-->
   <script>
@@ -294,7 +297,7 @@
                 </a>
               </li>
               <li>
-                <a href="newStockCheck.html" >
+                <a href="index.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
