--- a/src/main/webapp/newWarehouseManage.html
+++ b/src/main/webapp/newWarehouseManage.html
@@ -27,6 +27,8 @@
   <link rel="stylesheet" href="assets/styles/app.css" type="text/css" />
   <!-- endbuild -->
   <link rel="stylesheet" href="assets/styles/font.css" type="text/css" />
+    <script src="libs/jquery/jquery/dist/jquery.js"></script>
+
 
 </head>
 
@@ -332,7 +334,7 @@
                 </a>
               </li>
               <li>
-                <a href="newStockCheck.html" >
+                <a href="index.html" >
                   <span class="nav-icon">
                     <i class="material-icons">&#xe429;
                       <span ui-include="'assets/images/i_4.svg'"></span>
